prevent scrolling on mobiles modal backdrop option for offcanvas

--- a/less/variables.less
+++ b/less/variables.less
@@ -5,7 +5,7 @@
 //  "default-variables.less" should be loaded before this file.
 // -------------------------------------------------------------
 
-@zindex-navmenu-fixed:     1030;
+@zindex-navmenu-fixed:     @zindex-modal;
 @zindex-alert-fixed:       1035;
 
 @container-smooth:         @container-lg;
